lua-factory: throw error on bad grl.callback

Throw luaL_error instead of system error on broken sources. This
facilitate the developer to find bad usage of grl.callback on lua
sources.

https://bugzilla.gnome.org/show_bug.cgi?id=750955